poprawa generowania slupkow

--- a/projekt_informatyka_gra.vcxproj.filters
+++ b/projekt_informatyka_gra.vcxproj.filters
@@ -27,10 +27,10 @@
     <ClCompile Include="pet.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
-    <ClCompile Include="pomoc.cpp">
+    <ClCompile Include="slupki.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
-    <ClCompile Include="slupki.cpp">
+    <ClCompile Include="animacja.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
   </ItemGroup>
@@ -44,10 +44,10 @@
     <ClInclude Include="pet.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
-    <ClInclude Include="pomoc.h">
+    <ClInclude Include="slupki.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
-    <ClInclude Include="slupki.h">
+    <ClInclude Include="animacja.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
   </ItemGroup>
