--- a/projekt_informatyka_gra.vcxproj
+++ b/projekt_informatyka_gra.vcxproj
@@ -142,18 +142,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="animacja.cpp" />
     <ClCompile Include="Gra.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="menu.cpp" />
     <ClCompile Include="pet.cpp" />
-    <ClCompile Include="pomoc.cpp" />
     <ClCompile Include="slupki.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="animacja.h" />
     <ClInclude Include="Gra.h" />
     <ClInclude Include="menu.h" />
     <ClInclude Include="pet.h" />
-    <ClInclude Include="pomoc.h" />
     <ClInclude Include="slupki.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
